src/global.css
/* ... */
*,
:after,
:before {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(147, 197, 253, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  --tw-prose-links: var(--ds-blue-700);
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: var(--ds-gray-200);
}

html {
  line-height: 1;
  -webkit-text-size-adjust: 100%;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    "Helvetica Neue",
    Arial,
    "Noto Sans",
    sans-serif,
    "Apple Color Emoji",
    "Segoe UI Emoji",
    "Segoe UI Symbol",
    "Noto Color Emoji";
  scroll-behavior: smooth;
}

body {
  padding: 0;
  margin: 0;
  color: var(--ds-gray-1000);
  text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
  line-height: 1.65;
  box-sizing: border-box;
}

@media (min-width: 1024px) {
  .style_container {
    width: calc(100% + 96px);
  }
}

.bg-vercel-200 {
  background-color: var(--ds-background-200);
}

.text_wrapper {
  --text-size: 0.875rem;
  --text-weight: 400;
  --text-line-height: 1.25rem;
  font-family: var(--font-sans, var(--font-sans-fallback));

  margin: 0;
  color: var(--text-color);
  font-size: var(--text-size);
  letter-spacing: var(--text-letter-spacing, inherit);
  font-weight: var(--text-weight);
  line-height: var(--text-line-height);
  text-transform: var(--text-transform, inherit);
  text-align: var(--text-align, inherit);
}
.text_truncate {
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  max-width: 100%;
  min-width: 0;
}
@media screen and (min-width: 0px) {
  .text_wrapper {
    --text-size: var(--sm-text-size);
    --text-weight: var(--sm-text-weight);
    --text-line-height: var(--sm-text-line-height);
    --text-letter-spacing: var(--sm-text-letter-spacing);
  }
}
@media screen and (min-width: 601px) {
  .text_wrapper {
    --text-size: var(--md-text-size);
    --text-weight: var(--md-text-weight);
    --text-line-height: var(--md-text-line-height);
    --text-letter-spacing: var(--md-text-letter-spacing);
  }
}

svg circle,
svg line,
svg path,
svg polygon,
svg rect {
  shape-rendering: geometricprecision;
}

.shadow,
.shadow-md,
.shadow-sm {
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.shadow,
.shadow-md {
  --tw-shadow: var(--ds-shadow-border-medium);
  --tw-shadow-colored: var(--ds-shadow-border-medium);
}

.prose :where(h2):not(:where([class~="not-prose"] *)) {
  color: var(--tw-prose-headings);
  font-weight: 700;
  font-size: 1.5em;
  margin-top: 2em;
  margin-bottom: 1em;
  line-height: 1.3333333;
}
.prose-vercel :where(h2):not(:where([class~="not-prose"] *)) {
  font-weight: 600;
  scroll-margin-top: 51px;
}
.prose-vercel :where(h2:not(:is(h1 + h2))):not(:where([class~="not-prose"] *)) {
  border-top-style: solid;
  border-top-width: 1px;
  border-color: var(--ds-gray-200);
  padding-top: 2.5rem;
  scroll-margin-top: 50px;
}
.prose-vercel
  :where([data-docs-heading]):not(:where([class~="not-prose"] *))
  a
  span {
  display: inline-flex;
  margin-left: 0.375rem;
  visibility: hidden;
  opacity: 0;
}
.prose-vercel
  :where([data-docs-heading]):not(:where([class~="not-prose"] *))
  a:hover
  span {
  visibility: visible;
  opacity: 1;
}

.prose :where(figure):not(:where([class~="not-prose"] *)) {
  margin-top: 2em;
  margin-bottom: 2em;
}

.prose :where(h2 + *):not(:where([class~="not-prose"] *)) {
  margin-top: 0;
}

.prose :where(p):not(:where([class~="not-prose"] *)) {
  margin-top: 1.25em;
  margin-bottom: 1.25em;
}

.prose :where(ul):not(:where([class~="not-prose"] *)) {
  list-style-type: disc;
  margin-top: 1.25em;
  margin-bottom: 1.25em;
  padding-left: 1.625em;
}

.prose :where(li):not(:where([class~="not-prose"] *)) {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}
.prose :where(ul > li):not(:where([class~="not-prose"] *)) {
  padding-left: 0.375em;
}

.prose :where(a):not(:where([class~="not-prose"] *)) {
  color: var(--tw-prose-links);
  text-decoration: underline;
  font-weight: 500;
}
.prose-vercel :where(a):not(:where([class~="not-prose"] *)) {
  text-decoration: none;
  font-weight: inherit;
}
.prose-vercel
  :where([data-docs-heading]):not(:where([class~="not-prose"] *))
  a {
  color: inherit;
}
@media (hover: hover) {
  a:hover {
    color: #68b5fb;
  }
}

.prose :where(code):not(:where([class~="not-prose"] *)) {
  color: var(--tw-prose-code);
  font-weight: 600;
  font-size: 0.875em;
}
.prose-vercel :where(code):not(:where([class~="not-prose"] *)) {
  font-weight: inherit;
  background-color: var(--ds-gray-100);
  border-radius: 0.375rem;
  border-width: 1px;
  border-color: var(--ds-gray-200);
  padding: 0.125rem 0.25rem;
}

.prose :where(h3):not(:where([class~="not-prose"] *)) {
  color: var(--tw-prose-headings);
  font-weight: 600;
  font-size: 1.25em;
  margin-top: 1.6em;
  margin-bottom: 0.6em;
  line-height: 1.6;
}
/* ... */

